<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/live_icon"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/sell_icon"
        android:title="@string/title_Sell" />

    <item
        android:id="@+id/navigation_engagement"
        android:icon="@drawable/engagement_icon"
        android:title="@string/title_Engagement" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_Profile" />



</menu>