<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/_8sdp"
    android:paddingRight="@dimen/_8sdp"
    android:paddingTop="@dimen/_8sdp"
    tools:context=".view.fragments.AboutUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="match_parent">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_13sdp"
          android:text="Meet Sellah!"
          android:gravity="center"
          android:layout_marginBottom="@dimen/_10sdp"
          android:textStyle="bold"
          android:textColor="@color/colorRed"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_13sdp"
          android:text="@string/about_us"
          android:textStyle="bold"
          />
      <TextView
          android:layout_marginTop="@dimen/_5sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_12sdp"
          android:text="@string/about_us_description"
          />
      <ImageView
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_width="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:layout_height="@dimen/_200sdp"
          android:src="@drawable/whoweare"
          />
      <TextView
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_13sdp"
          android:text="@string/saving_c2c"
          android:textStyle="bold"
          />
      <TextView
          android:layout_marginTop="@dimen/_5sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_12sdp"
          android:text="@string/saving_c2c_description"
          />
      <TextView
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_13sdp"
          android:text="@string/about_name"
          android:textStyle="bold"
          />
      <TextView
          android:layout_marginTop="@dimen/_5sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_12sdp"
          android:text="@string/about_name_description"
          />
      <TextView
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_13sdp"
          android:text="@string/media_kit"
          android:textStyle="bold"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="horizontal"
          android:layout_height="wrap_content">
          <TextView
              android:id="@+id/txt_mediakit_dec"
              android:layout_marginTop="@dimen/_5sdp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/_12sdp"
              android:layout_marginBottom="@dimen/_10sdp"
              android:text="@string/media_kit_description"
              />

      </LinearLayout>
  </LinearLayout>
    </ScrollView>
</FrameLayout>