<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFormBg"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFormBg"
            tools:context=".view.activities.LoginActivity">

            <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorWhite"-->
            <!--android:minHeight="?attr/actionBarSize" />-->
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginRight="@dimen/_18sdp"
                android:layout_marginTop="?attr/actionBarSize"
                android:src="@drawable/sellah_icon_white" />

            <TextView
                android:id="@+id/txt_killer_quote"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Insert killer quote here, here and also here"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp" />

            <RelativeLayout
                android:id="@+id/signUp_relative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/back_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/text_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </RelativeLayout>


            <!--   <View
                   android:layout_width="match_parent"
                   android:layout_height="0.3dp"
                   android:layout_below="@id/signUp_relative"
                   android:background="@color/colorLGrey" />-->
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_killer_quote"
                android:layout_margin="@dimen/_18sdp"
                android:background="@drawable/round_border"
                android:orientation="vertical"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardPreventCornerOverlap="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signUp_relative">

                    <!-- <ScrollView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fillViewport="true">

             -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/_10sdp">


                        <TextView
                            android:id="@+id/txt_header"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@color/colorFormHeaderBg"
                            android:gravity="center|left"
                            android:paddingLeft="@dimen/_10sdp"
                            android:text="Sign In"
                            android:textColor="@color/colorRed"
                            android:textSize="@dimen/_14sdp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/t_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imageLogo"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:text="@string/email"
                                android:textSize="14sp" />


                            <EditText
                                android:id="@+id/etLogin_email"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_below="@id/t_email"
                                android:backgroundTint="@color/coloCreamyWhite"

                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:background="@drawable/edit_text_border"
                                android:hint="youremail@email.com"
                                android:inputType="textEmailAddress"
                                android:paddingLeft="@dimen/_5sdp"
                                android:singleLine="true"
                                android:textColorHint="@color/colorLGrey" />

                            <TextView
                                android:id="@+id/t_pass"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/etLogin_email"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:paddingTop="@dimen/_5sdp"
                                android:text="@string/login_pass"
                                android:textSize="14sp" />

                            <EditText
                                android:id="@+id/etLogin_pass"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_below="@id/t_pass"
                                android:backgroundTint="@color/coloCreamyWhite"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:background="@drawable/edit_text_border"
                                android:hint="******"
                                android:inputType="textPassword"
                                android:paddingLeft="@dimen/_5sdp"
                                android:singleLine="true" />

                            <Button
                                android:id="@+id/signIn"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_below="@id/etLogin_pass"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:background="@drawable/live_btn_bg"
                                android:elevation="@dimen/_80sdp"
                                android:gravity="center"
                                android:text="@string/sign_in"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/_14sdp" />

                            <TextView
                                android:id="@+id/signUp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:text="@string/dont_have_account"
                                android:textAlignment="center" />
                            <!-- <Button
                                 android:id="@+id/signUp"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_30sdp"
                                 android:layout_below="@id/signIn"
                                 android:layout_marginLeft="@dimen/_20sdp"
                                 android:layout_marginRight="@dimen/_20sdp"
                                 android:layout_marginTop="@dimen/_10sdp"
                                 android:background="@drawable/round_red_border"
                                 android:gravity="center"
                                 android:text="@string/sign_up"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
                                 android:textColor="@color/colorWhite"
                                 android:textSize="@dimen/_14sdp" />-->

                            <TextView
                                android:id="@+id/forgotPass"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/forgot"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/forgotPass"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/_5sdp"
                                android:text="@string/by_signing_in"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlack" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text"
                                android:layout_gravity="center"
                                android:text="@string/terms_cond"
                                android:textAlignment="center"
                                android:textColor="@color/colorRed" />
                        </LinearLayout>
                    </LinearLayout>
                    <!--</ScrollView>-->
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
